--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "tree-sitter-json"]
-	path = tree-sitter-json
+[submodule "tree-sitter-lua"]
+	path = tree-sitter-lua
 	url = git@github.com:WarRaft/tree-sitter-lua.git
