--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ tree-sitter-lua = { path = "./../tree-sitter-lua" }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 env_logger = "0.11.8"
+log = "0.4.27"
 
 [build-dependencies]
 
