--- a/package.json
+++ b/package.json
@@ -55,6 +55,21 @@
           "dark": "./icons/lua.svg"
         },
         "configuration": "./syntaxes/lua.language-configuration.json"
+      },
+      {
+        "id": "vjass",
+        "aliases": [
+          "VJASS",
+          "vjass"
+        ],
+        "extensions": [
+          ".vj"
+        ],
+        "icon": {
+          "light": "./icons/vjass.svg",
+          "dark": "./icons/vjass.svg"
+        },
+        "configuration": "./syntaxes/vjass.language-configuration.json"
       }
     ]
   }
