--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 #tree-sitter = "0.25.3"
 #tree-sitter-lua = { path = "./../tree-sitter-lua" }
 tree-sitter-bni = { path = "./../tree-sitter-bni" }
+strum = "0.27.1"
+strum_macros = "0.27.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 serde_repr = "0.1.20"
