--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0.140"
 serde_repr = "0.1.20"
 env_logger = "0.11.8"
 log = "0.4.27"
+url = { version = "2.5.4", features = ["serde"] }
 
 [build-dependencies]
 
