--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["nazarpunk <nazarpunk@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-#tree-sitter = "0.25.3"
+tree-sitter = "0.25.3"
 #tree-sitter-lua = { path = "./../tree-sitter-lua" }
 tree-sitter-bni = { path = "./../tree-sitter-bni" }
 strum = "0.27.1"
