--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde_repr = "0.1.20"
 env_logger = "0.11.8"
 log = "0.4.27"
 url = { version = "2.5.4", features = ["serde"] }
+once_cell = "1.21.3"
 
 [build-dependencies]
 
